--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hottest 100 Tracker</title>
+	<title>React Scrollbars</title>
 </head>
 <body>
   <div id="App"></div>
